[package]
name = "option-cell"
version = "0.1.0"
edition = "2021"
# rust-version = "..."
# exclude = []
# include = []

description = "OptionCell: OnceCell but derivable from Option"
authors = ["Masaki Hara <ackie.h.gmail.com>"]
# homepage = ""
repository = "https://github.com/qnighy/option-cell"
license = "MIT OR Apache-2.0"
# keywords = []
categories = ["rust-patterns", "memory-management"]

[dependencies]
